# kindred

./: .env.dev  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  start.sh
backend/auth/: serializers.py  urls.py  views.py
backend/common/: models.py  serializers.py
backend/communities/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
backend/communities/migrations/: 0001_initial.py  0002_auto_20210321_0214.py  0002_community_users.py  0003_remove_community_number_of_users.py
backend/events/: admin.py  models.py  serializers.py  views.py
backend/events/migrations/: 0001_initial.py
backend/kindred/: asgi.py  settings.py  urls.py  wsgi.py
backend/posts/: admin.py  models.py  serializers.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_post_user.py
backend/users/: admin.py  models.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: .prettierignore  package.json
frontend/src/app/: rootReducer.ts  store.ts
frontend/src/components/: emoji.tsx  index.tsx
frontend/src/pages/: _app.tsx  _document.tsx  events.tsx  gallery.tsx  index.tsx  login.tsx  settings.tsx  signup.tsx
frontend/src/themes/: globalStyle.tsx
frontend/src/types/: community.ts  event.ts  group.ts  index.ts  post.ts  user.ts
frontend/src/utils/: axios.ts  constants.ts  index.ts  saveToken.ts  (+2 more)
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: nginx.conf
(+14 files in other folders)
