[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jacob Fresh <jacob@fresh.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
